--- a/src/WebGatewayService/appsettings.Development.json
+++ b/src/WebGatewayService/appsettings.Development.json
@@ -1,16 +1,18 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft.AspNetCore": "Trace"
+      "Default": "Warning",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "// Urls": "http://*:80;https://*:443",
+  "Urls": "http://*:9080",
   "// LettuceEncrypt": {
     "AcceptTermsOfService": true,
     "DomainNames": [ "example.com", "www.example.com" ],
     "EmailAddress": "it-admin@example.com"
   },
+  "BlockUnSecureRequests": false,
   "ReverseProxy": {
     "Routes": {
       "httpbin_route": {
