--- a/src/WebGatewayService/appsettings.json
+++ b/src/WebGatewayService/appsettings.json
@@ -7,5 +7,6 @@
   },
   "AllowedHosts": "*",
   "PathBase": "",
-  "Urls": "http://*:80"
+  "Urls": "http://*:80",
+  "BlockUnSecureRequests": false
 }
